# docman

./: .gitignore  README.md  package.json  功能发布记录.md
API参考/: 数据结构.md  服务域名.md  概述.md  请求头和错误返回.md
API参考(v1)/: API功能更新记录 .md  概述.md  训练任务相关接口.md  请求头和错误返回.md  资源池相关接口.md  通用说明.md  附录.md
backend/: package-lock.json  package.json
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: diagnose.rs  document.rs  mod.rs  prompt.rs  work_dir.rs
desktop/src-tauri/src/models/: types.rs
desktop/src-tauri/src/services/: file_service.rs  mod.rs  prompt_service.rs
docs/: _sidebar.md  custom.css  index.html
raw/: 快速入门.md
research_reports/: 华西证券-计算机行业周报：DeepSeek~V4强化国产算力适配.md
scripts/: sync-product-docs.mjs
web/: index.html  package-lock.json  package.json
产品定价/: 计费方式.md  计费概述.md
产品描述/: 产品优势.md  介绍.md  核心概念.md
常见问题/: GPU虚拟化适配表.md  模型部署.md  资源池常见问题.md
快速入门/: BGE-M3.md  Baichuan2-13B-Chat.md  DeepSeek-Coder-V2-Lite-Instruct.md  DeepSeek-OCR.md  DeepSeek-R1-Distill-Llama-70B.md  DeepSeek-R1-Distill-Llama-8B.md  DeepSeek-R1-Distill-Qwen-1.5B.md  DeepSeek-R1-Distill-Qwen-7B.md  DeepSeek-R1（FP8）.md  DeepSeek-V3-0324.md  DeepSeek-V3.2.md  DeepSeek-V3（FP8）.md  ERNIE-4.5-0.3B-Base.md  ERNIE-4.5-21B-A3B-Base.md  ERNIE-4.5-300B-A47B-Base.md  ERNIE-4.5-VL-424B-A47B-Base.md  ERNIE-4.5-VL-424B-A47B.md  GLM-4.5-Air.md  GLM-4.5.md  GLM-4.5V.md  (+73 more)
(+608 files in other folders)
